Event / OccurrenceEvent rework, including RRULE + strategy design pattern